--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
             </div>
       </div>      
       <script src="jquery-3.6.0.min.js"></script>
-      <script src="index.js"></script>
+      <script src="main.js"></script>
 </body>
 </html>
